<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="predefined_message">This button will launch</string>
    <string name="button_capstone_text">Capstone</string>
    <string name="button_xyzReader_text">XYZ Reader</string>
    <string name="button_buildItBigger_text">Build It Bigger</string>
    <string name="button_libraryApp_text">Library App</string>
    <string name="button_scoresApp_text">Scores App</string>
    <string name="button_spotifyStreamer_text">Spotify Streamer</string>
    <string name="title">My Nanodegree Apps!</string>
</resources>
